# api-python

./: .env.development  .gitignore  .pre-commit-config.yaml  dev-start.sh  dev-stop.sh  pyproject.toml  requirements.txt  ruff.toml
app/: __init__.py  main.py  test_main.py
app/models/: user.py
app/schemas/: user.py
infra/: alembic.ini  compose.yaml  database.py
infra/migrations/: env.py
infra/migrations/versions/: 66a20d25bec4_create_table_user.py
