[tool.poetry]
name = "api-python"
version = "0.1.0"
description = ""
authors = ["juanpablow <juan.santana.macedo10@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.13.2"
annotated-types = "0.7.0"
anyio = "4.4.0"
certifi = "2024.6.2"
click = "8.1.7"
dnspython = "2.6.1"
email-validator = "2.2.0"
exceptiongroup = "1.2.1"
fastapi = "0.111.0"
fastapi-cli = "0.0.4"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
jinja2 = "3.1.4"
mako = "1.3.5"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
orjson = "3.10.5"
psycopg2-binary = "2.9.9"
pydantic = "2.8.0"
pydantic-core = "2.20.0"
pygments = "2.18.0"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
python-dotenv = "1.0.1"
rich = "13.7.1"
sniffio = "1.3.1"
sqlalchemy = "2.0.31"
starlette = "0.37.2"
typer = "0.12.3"
typing-extensions = "4.12.2"
ujson = "5.10.0"
watchfiles = "0.22.0"
websockets = "12.0"


[tool.poetry.group.dev.dependencies]
docopt = "0.6.2"
iniconfig = "2.0.0"
pluggy = "1.5.0"
pytest = "8.2.2"
pytest-watch = "4.2.0"
shellingham = "1.5.4"
tomli = "2.0.1"
watchdog = "4.0.1"
colorama = "0.4.6"
exceptiongroup = "1.2.1"
ruff = "0.5.0"
packaging = "24.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
